get rid of absolute paths in mockups

--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="//use.typekit.net/qtm7epo.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src="/jquery.tinycarousel.min.js"></script>
+    <script src="jquery.tinycarousel.min.js"></script>
   </head>
   <body>
     <div id="wrap">
@@ -17,17 +17,17 @@
           <span class="d">Painters</span>
         </div>
         <ul>
-          <li><a class="active" href="/">Home</a></li>
-          <li><a href="/work.html">Work</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div> <!-- #heading -->
       <div id="worksby">
         <h3>Work By</h3>
         <ul>
           <li><a href="#">Peggy Anderson</a></li>
-          <li><a href="/richard.html">Richard Baumann</a></li>
+          <li><a href="richard.html">Richard Baumann</a></li>
           <li><a href="#">Francine Fisch</a></li>
           <li><a href="#">Tony Mavilia</a></li>
           <li><a href="#">Jeanne Morrow</a></li>
