--- a/html/work.html
+++ b/html/work.html
@@ -14,10 +14,10 @@
           <span class="d">Painters</span>
         </div>
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a class="active" href="/work.html">Work</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="">Home</a></li>
+          <li><a class="active" href="work.html">Work</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
 
       </div> <!-- #heading -->
@@ -25,7 +25,7 @@
         <h3>Work By</h3>
         <ul>
           <li><a href="#">Peggy Anderson</a></li>
-          <li><a href="/richard.html">Richard Baumann</a></li>
+          <li><a href="richard.html">Richard Baumann</a></li>
           <li><a href="#">Francine Fisch</a></li>
           <li><a href="#">Tony Mavilia</a></li>
           <li><a href="#">Jeanne Morrow</a></li>
@@ -44,9 +44,9 @@
               <div class="caption">A Painting - 30"x40" - 1991</div>
             </li>
             <li>
-              <h4><a href="/richard.html">Richard Baumann</a></h4>
-              <a href="/richard.html"><img src="http://abingdonsquarepainters.com/static/media/images/painting/200941323111701030.jpg"/></a>
-              <div class="caption"><a href="/richard.html">Coney Island Thunderbolt - 32"x24" - Oil on Linen - $3000.00 - 1990</a></div>
+              <h4><a href="richard.html">Richard Baumann</a></h4>
+              <a href="richard.html"><img src="http://abingdonsquarepainters.com/static/media/images/painting/200941323111701030.jpg"/></a>
+              <div class="caption"><a href="richard.html">Coney Island Thunderbolt - 32"x24" - Oil on Linen - $3000.00 - 1990</a></div>
             </li>
             <li>
               <h4>Francine Fisch</h4>
