--- a/html/contact.html
+++ b/html/contact.html
@@ -14,10 +14,10 @@
           <span class="d">Painters</span>
         </div>
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/work.html">Work</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a class="active" href="/contact.html">Contact</a></li>
+          <li><a href="">Home</a></li>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a class="active" href="contact.html">Contact</a></li>
         </ul>
 
       </div> <!-- #heading -->
@@ -25,7 +25,7 @@
         <h3>Work By</h3>
         <ul>
           <li><a href="#">Peggy Anderson</a></li>
-          <li><a href="/richard.html">Richard Baumann</a></li>
+          <li><a href="richard.html">Richard Baumann</a></li>
           <li><a href="#">Francine Fisch</a></li>
           <li><a href="#">Tony Mavilia</a></li>
           <li><a href="#">Jeanne Morrow</a></li>
