--- a/html/contact.html
+++ b/html/contact.html
@@ -14,7 +14,7 @@
           <span class="d">Painters</span>
         </div>
         <ul>
-          <li><a href="">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="work.html">Work</a></li>
           <li><a href="about.html">About</a></li>
           <li><a class="active" href="contact.html">Contact</a></li>
