start with transition

--- a/html/index.html
+++ b/html/index.html
@@ -84,6 +84,7 @@
         <script type="text/javascript">
           $(function () {
           $('#carousel').carousel('.carousel_prev', '.carousel_next', { transition: 2000 });
+          $(".carousel_next").click()
           setInterval(function() { $(".carousel_next").click() }, 5000);
           });
         </script>
