--- a/html/richard.html
+++ b/html/richard.html
@@ -15,7 +15,7 @@
           <span class="d">Painters</span>
         </div>
         <ul>
-          <li><a href="">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="work.html">Work</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
