adding image to about

--- a/html/about.html
+++ b/html/about.html
@@ -38,6 +38,7 @@
       <div id="main">
         <div id="about">
           <h2>About the Cooperative</h2>
+          <img src="studio.jpg"/>
           <p>The Abingdon Square Painters takes its name from its earliest location at Abingdon Square in New York’s Greenwich Village. By 1967 economics and a need for more space provided the impetus for relocation to a much beloved studio on 14th Street.</p>
 
           <p>Economic necessity again intruded itself and we made the move in 2009 to our present location in Long Island City. Long Island City has proven to be a welcome stimulus opening us to new members, neighbors and opportunities.</p>
